// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DatePicker Date Range renders the UI snapshot correctly 1`] = `
<div
  className="css-7ajbp2"
  id="ds-datePicker-basic-form-field"
>
  <fieldset
    className="css-13wylk3"
    id="ds-fieldset-ds-datePicker-basic"
  >
    <legend>
      Select the full date you want to visit NYPL
    </legend>
    <div
      className="css-1vpopwd"
      id="ds-datePicker-basic-form-row"
    >
      <div
        className="css-7ajbp2"
        id="ds-datePicker-basic-form-row-grandchild0"
      >
        <div
          className="react-datepicker-wrapper"
        >
          <div
            className="react-datepicker__input-container "
          >
            <span
              aria-live="polite"
              className="react-datepicker__aria-live"
              role="alert"
            />
            <div
              className="css-1u8qly9"
              id="ds-componentWrapper-ds-datePicker-basic-start"
              onBlur={[Function]}
              onKeyDown={[Function]}
              readOnly={false}
            >
              <label
                className="css-1xdhyk6"
                htmlFor="ds-datePicker-basic-start"
                id="ds-datePicker-basic-start-label"
              >
                From
              </label>
              <div
                className="css-79elbk"
              >
                <input
                  aria-label="From, Press tab to access the calendar."
                  autoComplete={null}
                  className="chakra-input css-1xdhyk6"
                  disabled={false}
                  id="ds-datePicker-basic-start"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  readOnly={false}
                  required={false}
                  step={null}
                  type="text"
                  value="1988-01-02"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="css-7ajbp2"
        id="ds-datePicker-basic-form-row-grandchild1"
      >
        <div
          className="react-datepicker-wrapper"
        >
          <div
            className="react-datepicker__input-container "
          >
            <span
              aria-live="polite"
              className="react-datepicker__aria-live"
              role="alert"
            />
            <div
              className="css-1u8qly9"
              id="ds-componentWrapper-ds-datePicker-basic-end"
              onBlur={[Function]}
              onKeyDown={[Function]}
              readOnly={false}
            >
              <label
                className="css-1xdhyk6"
                htmlFor="ds-datePicker-basic-end"
                id="ds-datePicker-basic-end-label"
              >
                To
              </label>
              <div
                className="css-79elbk"
              >
                <input
                  aria-label="To, Press tab to access the calendar."
                  autoComplete={null}
                  className="chakra-input css-1xdhyk6"
                  disabled={false}
                  id="ds-datePicker-basic-end"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  readOnly={false}
                  required={false}
                  step={null}
                  type="text"
                  value="1988-02-02"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-atomic={true}
      aria-live="polite"
      className="css-1xdhyk6"
      data-isinvalid={false}
      id="ds-helperErrorText-ds-datePicker-basic"
    >
      <div
        className="css-0"
      />
    </div>
  </fieldset>
</div>
`;

exports[`DatePicker Date Range renders the UI snapshot correctly 2`] = `
<div
  className="css-7ajbp2"
  id="ds-datePicker-no-label-form-field"
>
  <fieldset
    className="css-13wylk3"
    id="ds-fieldset-ds-datePicker-no-label"
  >
    <legend>
      Select the date you want to visit NYPL
    </legend>
    <div
      className="css-1vpopwd"
      id="ds-datePicker-no-label-form-row"
    >
      <div
        className="css-7ajbp2"
        id="ds-datePicker-no-label-form-row-grandchild0"
      >
        <div
          className="react-datepicker-wrapper"
        >
          <div
            className="react-datepicker__input-container "
          >
            <span
              aria-live="polite"
              className="react-datepicker__aria-live"
              role="alert"
            />
            <div
              className="css-1u8qly9"
              id="ds-componentWrapper-ds-datePicker-no-label-start"
              onBlur={[Function]}
              onKeyDown={[Function]}
              readOnly={false}
            >
              <label
                className="css-1xdhyk6"
                htmlFor="ds-datePicker-no-label-start"
                id="ds-datePicker-no-label-start-label"
              >
                From
              </label>
              <div
                className="css-79elbk"
              >
                <input
                  aria-label="From, Press tab to access the calendar."
                  autoComplete={null}
                  className="chakra-input css-1xdhyk6"
                  disabled={false}
                  id="ds-datePicker-no-label-start"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  readOnly={false}
                  required={false}
                  step={null}
                  type="text"
                  value="1988-01-02"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="css-7ajbp2"
        id="ds-datePicker-no-label-form-row-grandchild1"
      >
        <div
          className="react-datepicker-wrapper"
        >
          <div
            className="react-datepicker__input-container "
          >
            <span
              aria-live="polite"
              className="react-datepicker__aria-live"
              role="alert"
            />
            <div
              className="css-1u8qly9"
              id="ds-componentWrapper-ds-datePicker-no-label-end"
              onBlur={[Function]}
              onKeyDown={[Function]}
              readOnly={false}
            >
              <label
                className="css-1xdhyk6"
                htmlFor="ds-datePicker-no-label-end"
                id="ds-datePicker-no-label-end-label"
              >
                To
              </label>
              <div
                className="css-79elbk"
              >
                <input
                  aria-label="To, Press tab to access the calendar."
                  autoComplete={null}
                  className="chakra-input css-1xdhyk6"
                  disabled={false}
                  id="ds-datePicker-no-label-end"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  readOnly={false}
                  required={false}
                  step={null}
                  type="text"
                  value="1988-02-02"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-atomic={true}
      aria-live="polite"
      className="css-1xdhyk6"
      data-isinvalid={false}
      id="ds-helperErrorText-ds-datePicker-no-label"
    >
      <div
        className="css-0"
      />
    </div>
  </fieldset>
</div>
`;

exports[`DatePicker Date Range renders the UI snapshot correctly 3`] = `
<div
  className="css-7ajbp2"
  id="ds-datePicker-custom-format-form-field"
>
  <fieldset
    className="css-13wylk3"
    id="ds-fieldset-ds-datePicker-custom-format"
  >
    <legend>
      Select the date you want to visit NYPL
    </legend>
    <div
      className="css-1vpopwd"
      id="ds-datePicker-custom-format-form-row"
    >
      <div
        className="css-7ajbp2"
        id="ds-datePicker-custom-format-form-row-grandchild0"
      >
        <div
          className="react-datepicker-wrapper"
        >
          <div
            className="react-datepicker__input-container "
          >
            <span
              aria-live="polite"
              className="react-datepicker__aria-live"
              role="alert"
            />
            <div
              className="css-1u8qly9"
              id="ds-componentWrapper-ds-datePicker-custom-format-start"
              onBlur={[Function]}
              onKeyDown={[Function]}
              readOnly={false}
            >
              <label
                className="css-1xdhyk6"
                htmlFor="ds-datePicker-custom-format-start"
                id="ds-datePicker-custom-format-start-label"
              >
                From
              </label>
              <div
                className="css-79elbk"
              >
                <input
                  aria-label="From, Press tab to access the calendar."
                  autoComplete={null}
                  className="chakra-input css-1xdhyk6"
                  disabled={false}
                  id="ds-datePicker-custom-format-start"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  readOnly={false}
                  required={false}
                  step={null}
                  type="text"
                  value="1988/02/01"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="css-7ajbp2"
        id="ds-datePicker-custom-format-form-row-grandchild1"
      >
        <div
          className="react-datepicker-wrapper"
        >
          <div
            className="react-datepicker__input-container "
          >
            <span
              aria-live="polite"
              className="react-datepicker__aria-live"
              role="alert"
            />
            <div
              className="css-1u8qly9"
              id="ds-componentWrapper-ds-datePicker-custom-format-end"
              onBlur={[Function]}
              onKeyDown={[Function]}
              readOnly={false}
            >
              <label
                className="css-1xdhyk6"
                htmlFor="ds-datePicker-custom-format-end"
                id="ds-datePicker-custom-format-end-label"
              >
                To
              </label>
              <div
                className="css-79elbk"
              >
                <input
                  aria-label="To, Press tab to access the calendar."
                  autoComplete={null}
                  className="chakra-input css-1xdhyk6"
                  disabled={false}
                  id="ds-datePicker-custom-format-end"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  readOnly={false}
                  required={false}
                  step={null}
                  type="text"
                  value="1988/02/02"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-atomic={true}
      aria-live="polite"
      className="css-1xdhyk6"
      data-isinvalid={false}
      id="ds-helperErrorText-ds-datePicker-custom-format"
    >
      <div
        className="css-0"
      />
    </div>
  </fieldset>
</div>
`;

exports[`DatePicker Date Range renders the UI snapshot correctly 4`] = `
<div
  className="css-7ajbp2"
  id="ds-datePicker-invalid-form-field"
>
  <fieldset
    className="css-13wylk3"
    id="ds-fieldset-ds-datePicker-invalid"
  >
    <legend>
      Select the date you want to visit NYPL
    </legend>
    <div
      className="css-1vpopwd"
      id="ds-datePicker-invalid-form-row"
    >
      <div
        className="css-7ajbp2"
        id="ds-datePicker-invalid-form-row-grandchild0"
      >
        <div
          className="react-datepicker-wrapper"
        >
          <div
            className="react-datepicker__input-container "
          >
            <span
              aria-live="polite"
              className="react-datepicker__aria-live"
              role="alert"
            />
            <div
              className="css-1u8qly9"
              id="ds-componentWrapper-ds-datePicker-invalid-start"
              onBlur={[Function]}
              onKeyDown={[Function]}
              readOnly={false}
            >
              <label
                className="css-1xdhyk6"
                htmlFor="ds-datePicker-invalid-start"
                id="ds-datePicker-invalid-start-label"
              >
                From
              </label>
              <div
                className="css-79elbk"
              >
                <input
                  aria-describedby="ds-datePicker-invalid-start-helperText"
                  aria-invalid={true}
                  aria-label="From, Press tab to access the calendar."
                  autoComplete={null}
                  className="chakra-input css-1xdhyk6"
                  disabled={false}
                  id="ds-datePicker-invalid-start"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  readOnly={false}
                  required={false}
                  step={null}
                  type="text"
                  value="1988-01-02"
                />
              </div>
              <div
                aria-atomic={true}
                aria-live="polite"
                className="css-1xdhyk6"
                data-isinvalid={true}
                id="ds-helperErrorText-ds-componentWrapper-ds-datePicker-invalid-start"
              >
                <div
                  className="css-0"
                  dangerouslySetInnerHTML={
                    {
                      "__html": "Please select a valid date.",
                    }
                  }
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="css-7ajbp2"
        id="ds-datePicker-invalid-form-row-grandchild1"
      >
        <div
          className="react-datepicker-wrapper"
        >
          <div
            className="react-datepicker__input-container "
          >
            <span
              aria-live="polite"
              className="react-datepicker__aria-live"
              role="alert"
            />
            <div
              className="css-1u8qly9"
              id="ds-componentWrapper-ds-datePicker-invalid-end"
              onBlur={[Function]}
              onKeyDown={[Function]}
              readOnly={false}
            >
              <label
                className="css-1xdhyk6"
                htmlFor="ds-datePicker-invalid-end"
                id="ds-datePicker-invalid-end-label"
              >
                To
              </label>
              <div
                className="css-79elbk"
              >
                <input
                  aria-describedby="ds-datePicker-invalid-end-helperText"
                  aria-invalid={true}
                  aria-label="To, Press tab to access the calendar."
                  autoComplete={null}
                  className="chakra-input css-1xdhyk6"
                  disabled={false}
                  id="ds-datePicker-invalid-end"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  readOnly={false}
                  required={false}
                  step={null}
                  type="text"
                  value="1988-02-02"
                />
              </div>
              <div
                aria-atomic={true}
                aria-live="polite"
                className="css-1xdhyk6"
                data-isinvalid={true}
                id="ds-helperErrorText-ds-componentWrapper-ds-datePicker-invalid-end"
              >
                <div
                  className="css-0"
                  dangerouslySetInnerHTML={
                    {
                      "__html": "Please select a valid date.",
                    }
                  }
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-atomic={true}
      aria-live="polite"
      className="css-1xdhyk6"
      data-isinvalid={false}
      id="ds-helperErrorText-ds-datePicker-invalid"
    >
      <div
        className="css-0"
        dangerouslySetInnerHTML={
          {
            "__html": "Note that the Library may be closed on Sundays.",
          }
        }
      />
    </div>
  </fieldset>
</div>
`;

exports[`DatePicker Date Range renders the UI snapshot correctly 5`] = `
<div
  className="css-7ajbp2"
  id="ds-datePicker-disabled-form-field"
>
  <fieldset
    className="css-13wylk3"
    id="ds-fieldset-ds-datePicker-disabled"
  >
    <legend>
      Select the date you want to visit NYPL
    </legend>
    <div
      className="css-1vpopwd"
      id="ds-datePicker-disabled-form-row"
    >
      <div
        className="css-7ajbp2"
        id="ds-datePicker-disabled-form-row-grandchild0"
      >
        <div
          className="react-datepicker-wrapper"
        >
          <div
            className="react-datepicker__input-container "
          >
            <span
              aria-live="polite"
              className="react-datepicker__aria-live"
              role="alert"
            />
            <div
              className="css-1u8qly9"
              id="ds-componentWrapper-ds-datePicker-disabled-start"
              onBlur={[Function]}
              onKeyDown={[Function]}
              readOnly={false}
            >
              <label
                className="css-1xdhyk6"
                htmlFor="ds-datePicker-disabled-start"
                id="ds-datePicker-disabled-start-label"
              >
                From
              </label>
              <div
                className="css-79elbk"
              >
                <input
                  aria-label="From, Press tab to access the calendar."
                  autoComplete={null}
                  className="chakra-input css-1xdhyk6"
                  disabled={true}
                  id="ds-datePicker-disabled-start"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  readOnly={false}
                  required={false}
                  step={null}
                  type="text"
                  value="1988-01-02"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="css-7ajbp2"
        id="ds-datePicker-disabled-form-row-grandchild1"
      >
        <div
          className="react-datepicker-wrapper"
        >
          <div
            className="react-datepicker__input-container "
          >
            <span
              aria-live="polite"
              className="react-datepicker__aria-live"
              role="alert"
            />
            <div
              className="css-1u8qly9"
              id="ds-componentWrapper-ds-datePicker-disabled-end"
              onBlur={[Function]}
              onKeyDown={[Function]}
              readOnly={false}
            >
              <label
                className="css-1xdhyk6"
                htmlFor="ds-datePicker-disabled-end"
                id="ds-datePicker-disabled-end-label"
              >
                To
              </label>
              <div
                className="css-79elbk"
              >
                <input
                  aria-label="To, Press tab to access the calendar."
                  autoComplete={null}
                  className="chakra-input css-1xdhyk6"
                  disabled={true}
                  id="ds-datePicker-disabled-end"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  readOnly={false}
                  required={false}
                  step={null}
                  type="text"
                  value="1988-02-02"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-atomic={true}
      aria-live="polite"
      className="css-1xdhyk6"
      data-isinvalid={false}
      id="ds-helperErrorText-ds-datePicker-disabled"
    >
      <div
        className="css-0"
        dangerouslySetInnerHTML={
          {
            "__html": "Note that the Library may be closed on Sundays.",
          }
        }
      />
    </div>
  </fieldset>
</div>
`;

exports[`DatePicker Single input renders the UI snapshot correctly 1`] = `
<div
  className="css-7ajbp2"
  id="ds-datePicker-basic-form-field"
>
  <div
    className="css-7ajbp2"
    id="ds-datePicker-basic-start-form"
  >
    <div
      className="react-datepicker-wrapper"
    >
      <div
        className="react-datepicker__input-container "
      >
        <span
          aria-live="polite"
          className="react-datepicker__aria-live"
          role="alert"
        />
        <div
          className="css-1u8qly9"
          id="ds-componentWrapper-ds-datePicker-basic-start"
          onBlur={[Function]}
          onKeyDown={[Function]}
          readOnly={false}
        >
          <label
            className="css-1xdhyk6"
            htmlFor="ds-datePicker-basic-start"
            id="ds-datePicker-basic-start-label"
          >
            Select the full date you want to visit NYPL
          </label>
          <div
            className="css-79elbk"
          >
            <input
              aria-label="Select the full date you want to visit NYPL, Press tab to access the calendar."
              autoComplete={null}
              className="chakra-input css-1xdhyk6"
              disabled={false}
              id="ds-datePicker-basic-start"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              readOnly={false}
              required={false}
              step={null}
              type="text"
              value="1988-01-02"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-atomic={true}
    aria-live="polite"
    className="css-1xdhyk6"
    data-isinvalid={false}
    id="ds-helperErrorText-ds-datePicker-basic"
  />
</div>
`;

exports[`DatePicker Single input renders the UI snapshot correctly 2`] = `
<div
  className="css-7ajbp2"
  id="ds-datePicker-no-label-form-field"
>
  <div
    className="css-7ajbp2"
    id="ds-datePicker-no-label-start-form"
  >
    <div
      className="react-datepicker-wrapper"
    >
      <div
        className="react-datepicker__input-container "
      >
        <span
          aria-live="polite"
          className="react-datepicker__aria-live"
          role="alert"
        />
        <div
          className="css-1u8qly9"
          id="ds-componentWrapper-ds-datePicker-no-label-start"
          onBlur={[Function]}
          onKeyDown={[Function]}
          readOnly={false}
        >
          <div
            className="css-79elbk"
          >
            <input
              aria-label="Select the date you want to visit NYPL, Press tab to access the calendar."
              autoComplete={null}
              className="chakra-input css-1xdhyk6"
              disabled={false}
              id="ds-datePicker-no-label-start"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              readOnly={false}
              required={false}
              step={null}
              type="text"
              value="1988-01-02"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-atomic={true}
    aria-live="polite"
    className="css-1xdhyk6"
    data-isinvalid={false}
    id="ds-helperErrorText-ds-datePicker-no-label"
  />
</div>
`;

exports[`DatePicker Single input renders the UI snapshot correctly 3`] = `
<div
  className="css-7ajbp2"
  id="ds-datePicker-custom-format-form-field"
>
  <div
    className="css-7ajbp2"
    id="ds-datePicker-custom-format-start-form"
  >
    <div
      className="react-datepicker-wrapper"
    >
      <div
        className="react-datepicker__input-container "
      >
        <span
          aria-live="polite"
          className="react-datepicker__aria-live"
          role="alert"
        />
        <div
          className="css-1u8qly9"
          id="ds-componentWrapper-ds-datePicker-custom-format-start"
          onBlur={[Function]}
          onKeyDown={[Function]}
          readOnly={false}
        >
          <label
            className="css-1xdhyk6"
            htmlFor="ds-datePicker-custom-format-start"
            id="ds-datePicker-custom-format-start-label"
          >
            Select the date you want to visit NYPL
          </label>
          <div
            className="css-79elbk"
          >
            <input
              aria-label="Select the date you want to visit NYPL, Press tab to access the calendar."
              autoComplete={null}
              className="chakra-input css-1xdhyk6"
              disabled={false}
              id="ds-datePicker-custom-format-start"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              readOnly={false}
              required={false}
              step={null}
              type="text"
              value="1988/02/01"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-atomic={true}
    aria-live="polite"
    className="css-1xdhyk6"
    data-isinvalid={false}
    id="ds-helperErrorText-ds-datePicker-custom-format"
  />
</div>
`;

exports[`DatePicker Single input renders the UI snapshot correctly 4`] = `
<div
  className="css-7ajbp2"
  id="ds-datePicker-invalid-form-field"
>
  <div
    className="css-7ajbp2"
    id="ds-datePicker-invalid-start-form"
  >
    <div
      className="react-datepicker-wrapper"
    >
      <div
        className="react-datepicker__input-container "
      >
        <span
          aria-live="polite"
          className="react-datepicker__aria-live"
          role="alert"
        />
        <div
          className="css-1u8qly9"
          id="ds-componentWrapper-ds-datePicker-invalid-start"
          onBlur={[Function]}
          onKeyDown={[Function]}
          readOnly={false}
        >
          <label
            className="css-1xdhyk6"
            htmlFor="ds-datePicker-invalid-start"
            id="ds-datePicker-invalid-start-label"
          >
            Select the date you want to visit NYPL
          </label>
          <div
            className="css-79elbk"
          >
            <input
              aria-describedby="ds-datePicker-invalid-start-helperText"
              aria-invalid={true}
              aria-label="Select the date you want to visit NYPL, Press tab to access the calendar."
              autoComplete={null}
              className="chakra-input css-1xdhyk6"
              disabled={false}
              id="ds-datePicker-invalid-start"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              readOnly={false}
              required={false}
              step={null}
              type="text"
              value="1988-01-02"
            />
          </div>
          <div
            aria-atomic={true}
            aria-live="polite"
            className="css-1xdhyk6"
            data-isinvalid={true}
            id="ds-helperErrorText-ds-componentWrapper-ds-datePicker-invalid-start"
          >
            <div
              className="css-0"
              dangerouslySetInnerHTML={
                {
                  "__html": "Please select a valid date.",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-atomic={true}
    aria-live="polite"
    className="css-1xdhyk6"
    data-isinvalid={false}
    id="ds-helperErrorText-ds-datePicker-invalid"
  />
</div>
`;

exports[`DatePicker Single input renders the UI snapshot correctly 5`] = `
<div
  className="css-7ajbp2"
  id="ds-datePicker-disabled-form-field"
>
  <div
    className="css-7ajbp2"
    id="ds-datePicker-disabled-start-form"
  >
    <div
      className="react-datepicker-wrapper"
    >
      <div
        className="react-datepicker__input-container "
      >
        <span
          aria-live="polite"
          className="react-datepicker__aria-live"
          role="alert"
        />
        <div
          className="css-1u8qly9"
          id="ds-componentWrapper-ds-datePicker-disabled-start"
          onBlur={[Function]}
          onKeyDown={[Function]}
          readOnly={false}
        >
          <label
            className="css-1xdhyk6"
            htmlFor="ds-datePicker-disabled-start"
            id="ds-datePicker-disabled-start-label"
          >
            Select the date you want to visit NYPL
          </label>
          <div
            className="css-79elbk"
          >
            <input
              aria-describedby="ds-datePicker-disabled-start-helperText"
              aria-label="Select the date you want to visit NYPL, Press tab to access the calendar."
              autoComplete={null}
              className="chakra-input css-1xdhyk6"
              disabled={true}
              id="ds-datePicker-disabled-start"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              readOnly={false}
              required={false}
              step={null}
              type="text"
              value="1988-01-02"
            />
          </div>
          <div
            aria-atomic={true}
            aria-live="polite"
            className="css-1xdhyk6"
            data-isinvalid={false}
            id="ds-helperErrorText-ds-componentWrapper-ds-datePicker-disabled-start"
          >
            <div
              className="css-0"
              dangerouslySetInnerHTML={
                {
                  "__html": "Note that the Library may be closed on Sundays.",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-atomic={true}
    aria-live="polite"
    className="css-1xdhyk6"
    data-isinvalid={false}
    id="ds-helperErrorText-ds-datePicker-disabled"
  />
</div>
`;

exports[`DatePicker Single input renders the UI snapshot correctly 6`] = `
<div
  className="css-1h2oq49"
  id="ds-datePicker-chakra-form-field"
>
  <div
    className="css-7ajbp2"
    id="ds-datePicker-chakra-start-form"
  >
    <div
      className="react-datepicker-wrapper"
    >
      <div
        className="react-datepicker__input-container "
      >
        <span
          aria-live="polite"
          className="react-datepicker__aria-live"
          role="alert"
        />
        <div
          className="css-1u8qly9"
          id="ds-componentWrapper-ds-datePicker-chakra-start"
          onBlur={[Function]}
          onKeyDown={[Function]}
          readOnly={false}
        >
          <label
            className="css-1xdhyk6"
            htmlFor="ds-datePicker-chakra-start"
            id="ds-datePicker-chakra-start-label"
          >
            Select the date you want to visit NYPL
          </label>
          <div
            className="css-79elbk"
          >
            <input
              aria-describedby="ds-datePicker-chakra-start-helperText"
              aria-label="Select the date you want to visit NYPL, Press tab to access the calendar."
              autoComplete={null}
              className="chakra-input css-1xdhyk6"
              disabled={false}
              id="ds-datePicker-chakra-start"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              readOnly={false}
              required={false}
              step={null}
              type="text"
              value="1988-01-02"
            />
          </div>
          <div
            aria-atomic={true}
            aria-live="polite"
            className="css-1xdhyk6"
            data-isinvalid={false}
            id="ds-helperErrorText-ds-componentWrapper-ds-datePicker-chakra-start"
          >
            <div
              className="css-0"
              dangerouslySetInnerHTML={
                {
                  "__html": "Note that the Library may be closed on Sundays.",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-atomic={true}
    aria-live="polite"
    className="css-1xdhyk6"
    data-isinvalid={false}
    id="ds-helperErrorText-ds-datePicker-chakra"
  />
</div>
`;

exports[`DatePicker Single input renders the UI snapshot correctly 7`] = `
<div
  className="css-7ajbp2"
  data-testid="datepicker"
  id="ds-datePicker-props-form-field"
>
  <div
    className="css-7ajbp2"
    id="ds-datePicker-props-start-form"
  >
    <div
      className="react-datepicker-wrapper"
    >
      <div
        className="react-datepicker__input-container "
      >
        <span
          aria-live="polite"
          className="react-datepicker__aria-live"
          role="alert"
        />
        <div
          className="css-1u8qly9"
          id="ds-componentWrapper-ds-datePicker-props-start"
          onBlur={[Function]}
          onKeyDown={[Function]}
          readOnly={false}
        >
          <label
            className="css-1xdhyk6"
            htmlFor="ds-datePicker-props-start"
            id="ds-datePicker-props-start-label"
          >
            Select the date you want to visit NYPL
          </label>
          <div
            className="css-79elbk"
          >
            <input
              aria-describedby="ds-datePicker-props-start-helperText"
              aria-label="Select the date you want to visit NYPL, Press tab to access the calendar."
              autoComplete={null}
              className="chakra-input css-1xdhyk6"
              disabled={false}
              id="ds-datePicker-props-start"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              readOnly={false}
              required={false}
              step={null}
              type="text"
              value="1988-01-02"
            />
          </div>
          <div
            aria-atomic={true}
            aria-live="polite"
            className="css-1xdhyk6"
            data-isinvalid={false}
            id="ds-helperErrorText-ds-componentWrapper-ds-datePicker-props-start"
          >
            <div
              className="css-0"
              dangerouslySetInnerHTML={
                {
                  "__html": "Note that the Library may be closed on Sundays.",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-atomic={true}
    aria-live="polite"
    className="css-1xdhyk6"
    data-isinvalid={false}
    id="ds-helperErrorText-ds-datePicker-props"
  />
</div>
`;
